Added the item: "Raw Sapphire". Added the group "Sapphire", now in the game you have a page for sapphire-related items.

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.tutorial-mod.sapphire": "Sapphire",
-  "item.tutorial-mod.scalimbo": "Scalimbo"
+  "item.tutorial-mod.scalimbo": "Scalimbo",
+  "item.tutorial-mod.raw_sapphire": "Raw Sapphire",
+
+  "itemgroup.sapphire": "Sapphire Tutorial Group"
 }
