Added the group "Scalimbo Merda", now in the game you have a page for scalimbo-related items.

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.tutorial-mod.scalimbo": "Scalimbo",
   "item.tutorial-mod.raw_sapphire": "Raw Sapphire",
 
-  "itemgroup.sapphire": "Sapphire Tutorial Group"
+  "itemgroup.sapphire": "Sapphire Tutorial Group",
+  "itemgroup.scalimbo": "Scalimbo Merda"
 }
